--- a/package.json
+++ b/package.json
@@ -1,20 +1,32 @@
 {
+  "name": "react_native_expo",
+  "version": "1.0.0",
+  "private": true,
+  "description": "React native expo jobs search app.",
+  "main": "index.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web"
   },
+  "proxy": "http://localhost:19000/",
   "dependencies": {
+    "axios": "^1.4.0",
     "expo": "^48.0.7",
     "expo-constants": "~14.2.1",
+    "expo-font": "^11.1.1",
     "expo-linking": "~4.0.1",
     "expo-router": "^1.2.0",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.71.3",
+    "react-native": "0.71.8",
+    "react-native-dotenv": "^3.4.8",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
@@ -23,7 +35,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
-    "@babel/plugin-proposal-export-namespace-from": "^7.18.9"
+    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
+    "metro-react-native-babel-preset": "^0.76.4"
   },
   "resolutions": {
     "metro": "^0.73.7",
@@ -32,8 +45,5 @@
   "overrides": {
     "metro": "^0.73.7",
     "metro-resolver": "^0.73.7"
-  },
-  "name": "react_native_expo",
-  "version": "1.0.0",
-  "private": true
+  }
 }
